--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,26 @@
     "builds": [
       {
         "src": "myapp/wsgi.py", 
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {"maxLambdaSize": "15mb","runtime":"python3.13"}
+      },
+      {
+        "src":"build_files.sh",
+        "use":"@vercel/staticfiles_build",
+        "config":{
+            "distDir": "staticfiles_build"
+        }
       }
+
     ],
     "routes": [
       {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
         "src": "/(.*)",
-        "dest": "myapp/wsgi.py"
+        "dest": "poll/wsgi.py"
       }
     ]
   }
